# mipt_homeworks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
db_course/: README.md  docker-compose.yml  pyproject.toml
db_course/docs/: schema.dbml
db_course/notebooks/: hw1.ipynb  hw2.ipynb  hw3.ipynb  populate_db.ipynb
db_course/scripts/: 01_init_db.sql
notebooks/: guess_number.ipynb
notebooks/plotly/: 10_sex_salary_bar.html  1_age_hist.html  2_exp_hist.html  4_edu_bar.html  5_city_box.html  6_ready_bar.html  7_salary_age_edu_heat.html  9_salary_edu_exp_heat.html
src/: __init__.py  game_core.py
tests/: test_game_core.py
