[tool.poetry]
name = "db-course"
version = "0.1.0"
description = ""
authors = ["Vitalii Karniushin <vkarnyushin@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyterlab = "^4.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
psycopg2-binary = "^2.9.9"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
